src/styles/Header.css
.header-container {
  width: 100vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 20px;
  height: 10vh;
}

.header-logo {
  height: 70px;
  margin-left: 20px;
  border-radius: 5px;
}

.header-logo img {
  height: 70px;
  margin-left: 20px;
  border-radius: 5px;
}

.navbar {
  display: none;
}

.burger-menu,
.close-menu-btn {
  font-size: 30px;
  margin: 20px;
  cursor: pointer;
  background: none;
  border: none;
  color: white;
}

.menu {
  position: fixed; /* Ändert von absolute zu fixed */
  top: 0;
  right: 0;
  width: 50%;
  height: 100%;
  background: linear-gradient(180deg, rgb(51, 123, 200), rgb(23, 40, 106));
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
  transform: translateX(100%);
  z-index: 99;
  visibility: hidden;
  opacity: 0;
}

.menu-open .menu {
  transform: translateX(0);
  visibility: visible;
  opacity: 1;
}

.menu-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

.languages-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.languages-container button {
  margin: 4px;
  background-color: transparent;
  color: white;
  border: none;
  cursor: pointer;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 20px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

li {
  margin: 10px 0;
}

a {
  color: white;
  text-decoration: none;
}

.admin-login-container {
  margin-top: 20px;
}

/* Responsive Styles */
@media (min-width: 768px) {
  .header-container {
    width: 100vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 20px;
  }
  .navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-right: 20px;
  }
  .navbar ul {
    display: flex;
    flex-direction: row;
    text-align: left;
    width: 100%;
    margin-right: 30px;
  }
  .navbar li {
    margin: 0 10px;
  }
  .burger-menu {
    display: none;
  }
  .menu {
    display: none;
  }
}

